NEON-1340 Removing the collapsable property from the query results table code because it is no longer necessary.

--- a/app/css/directives/queryResultsTable.css
+++ b/app/css/directives/queryResultsTable.css
@@ -16,9 +16,12 @@
 
 .query-results-directive {
     margin: 0px;
-    padding: 20px;
     height: 100%;
     width: 100%;
+}
+
+.visualization-widget .query-results-directive {
+    padding: 20px;
 }
 
 .count-header {
